--- a/index.html
+++ b/index.html
@@ -5,89 +5,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Application</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
-      <section id="search" class="search">
-        <input type="text" id="searchInput" />
+      <section class="main-section">
+        <section id="search" class="search">
+          <input
+            type="text"
+            id="searchInput"
+            placeholder="Search for cities"
+            class="search-input"
+          />
+        </section>
+        <section class="weather-info">
+          <div class="info">
+            <h3 class="city">İstanbul</h3>
+            <p class="cor">Change of rain: %0</p>
+            <p>30&deg;C</p>
+          </div>
+          <div class="weather-img">
+            <img src="#" alt="#" />
+          </div>
+        </section>
+        <section class="today-forecast">
+          <h3>Todays Forecast</h3>
+          <div class="hourly-main-div">
+            <div class="hourly-forecast">
+                <p class="hourly-time">9:00 PM</p>
+                <img src="#" alt="#" class="hourly-img" />
+                <p class="hourly-deg">25&deg;C</p>
+              </div>
+
+              <div class="hourly-forecast">
+                <p class="hourly-time">9:00 PM</p>
+                <img src="#" alt="#" class="hourly-img" />
+                <p class="hourly-deg">25&deg;C</p>
+              </div>
+              <div class="hourly-forecast">
+                <p class="hourly-time">9:00 PM</p>
+                <img src="#" alt="#" class="hourly-img" />
+                <p class="hourly-deg">25&deg;C</p>
+              </div><div class="hourly-forecast">
+                <p class="hourly-time">9:00 PM</p>
+                <img src="#" alt="#" class="hourly-img" />
+                <p class="hourly-deg">25&deg;C</p>
+              </div>
+          </div>
+        </section>
+        <section class="weather-conditions-main">
+          <h3>Weather Conditions</h3>
+          <div class="weather-conditions">
+            <div class="reel-feel">
+              <p><span>sembol işaretleri</span> Reel Fell</p>
+              <p>25&deg;C</p>
+            </div>
+            <div class="wind">
+              <p>
+                <span>sembol işaretleri</span>
+                Wind
+              </p>
+              <p>0.2 km/h</p>
+            </div>
+            <div class="change-of-rain">
+              <p>
+                <span>sembol işaretleri</span>
+                Change of rain
+              </p>
+              <p>40%</p>
+            </div>
+            <div class="uv-index">
+              <p>
+                <span>sembol işaretleri</span>
+                Uv Index
+              </p>
+              <p>3</p>
+            </div>
+          </div>
+        </section>
       </section>
-      <section class="weather-info">
-        <div class="info">
-          <h3 class="city">İstanbul</h3>
-          <p class="cor">Change of rain: %0</p>
-          <p>30&deg;C</p>
+
+      <aside>
+        <h3>5 Day Forecast</h3>
+        <div class="days-forecast">
+          <div class="days">
+            <p class="days-day">Today</p>
+            <img src="" alt="" class="days-img" />
+            <p class="days-case">Sunny</p>
+            <p class="days-degrees">36/47</p>
+          </div>
+          <div class="days">
+            <p class="days-day">Today</p>
+            <img src="" alt="" class="days-img" />
+            <p class="days-case">Sunny</p>
+            <p class="days-degrees">36/47</p>
+          </div>
+          <div class="days">
+            <p class="days-day">Today</p>
+            <img src="" alt="#" class="days-img" />
+            <p class="days-case">Sunny</p>
+            <p class="days-degrees">36/47</p>
+          </div>
         </div>
-        <div class="weather-img">
-          <img src="#" alt="#" />
-        </div>
-      </section>
-      <section class="today-forecast">
-        <div class="hourly-forecast">
-          <p class="hourly-time">9:00 PM</p>
-          <img src="" alt="" class="hourly-img" />
-          <p class="hourly-deg">25&deg;C</p>
-        </div>
-        <div class="hourly-forecast">
-          <p class="hourly-time">9:00 PM</p>
-          <img src="" alt="" class="hourly-img" />
-          <p class="hourly-deg">25&deg;C</p>
-        </div>
-        <div class="hourly-forecast">
-          <p class="hourly-time">9:00 PM</p>
-          <img src="" alt="" class="hourly-img" />
-          <p class="hourly-deg">25&deg;C</p>
-        </div>
-      </section>
-      <section class="weather-conditions">
-        <div class="reel-feel">
-          <p><span>sembol işaretleri</span> Reel Fell</p>
-          <p>25&deg;C</p>
-        </div>
-        <div class="wind">
-          <p>
-            <span>sembol işaretleri</span>
-            Wind
-          </p>
-          <p>0.2 km/h</p>
-        </div>
-        <div class="change-of-rain">
-          <p>
-            <span>sembol işaretleri</span>
-            Change of rain
-          </p>
-          <p>40%</p>
-        </div>
-        <div class="uv-index">
-          <p>
-            <span>sembol işaretleri</span>
-            Uv Index
-          </p>
-          <p>3</p>
-        </div>
-      </section>
+      </aside>
     </main>
-    <aside class="days-forecast">
-        <header>
-            <h1>5 Day Forecast</h1>
-        </header>
-        <div class="days">
-            <p class="days-day">Today</p>
-            <img src="" alt="" class="days-img">
-            <p class="days-case">Sunny</p>
-            <p class="days-degrees">36/47</p>
-        </div>
-        <div class="days">
-            <p class="days-day">Today</p>
-            <img src="" alt="" class="days-img">
-            <p class="days-case">Sunny</p>
-            <p class="days-degrees">36/47</p>
-        </div>
-        <div class="days">
-            <p class="days-day">Today</p>
-            <img src="" alt="" class="days-img">
-            <p class="days-case">Sunny</p>
-            <p class="days-degrees">36/47</p>
-        </div>
-    </aside>
+
+    <script src="script.js"></script>
   </body>
 </html>
