Created api request sending function by requesting user location

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3 id="degree"></h3>
           </div>
           <div class="weather-img">
-            <img src="" alt="" id="icon" />
+            <img src="" alt="" id="icon" style="width: 100%;"/>
           </div>
         </section>
         <section class="today-forecast">
